--- a/package.json
+++ b/package.json
@@ -1,10 +1,20 @@
 {
   "name": "@yubisaki/vuepress-plugin-pagination",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "publishConfig": {
     "access": "public"
   },
   "description": "pagination plugin for vuepress theme yubisaki",
+  "keywords": [
+    "vuepress",
+    "vuepress-plugin"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Yubisaki/vuepress-plugin-pagination.git"
+  },
+  "bugs": "https://github.com/Yubisaki/vuepress-plugin-pagination/issues",
+  "homepage": "https://github.com/Yubisaki/vuepress-plugin-pagination#readme",
   "main": "index.js",
   "author": "子肃 <stickmyc@163.com>",
   "license": "MIT"
