--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   "main": "index.js",
   "author": "子肃 <stickmyc@163.com>",
   "license": "MIT",
+  "scripts": {
+    "release": "release-it"
+  },
   "devDependencies": {
     "conventional-changelog-cli": "^2.0.5",
     "release-it": "^7.6.1"
